--- a/KiaraRolle copy/home.html
+++ b/KiaraRolle copy/home.html
@@ -89,6 +89,15 @@ document.getElementsByClassName('my-img').ondragstart = function() { return fals
             </div>     
         </div>
         
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <center>
+                    <img src="pictures/logo.PNG" title="Kaptured By Ki Logo" class="logoSpace">
+                    </center>
+                </div>
+            </div>
+        </div>
         <div class="container extraSpace">
             <div class="row">
                 <div class="col-lg-12">
