--- a/KiaraRolle copy/bookings.html
+++ b/KiaraRolle copy/bookings.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Perfect Match</title>
+        <title>Kaptured By Ki - Atlanta Photographer | Booking</title>
         <link rel="stylesheet" type="text/css" href="stylesBooking.css">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
