--- a/KiaraRolle copy/bookings.html
+++ b/KiaraRolle copy/bookings.html
@@ -39,6 +39,7 @@
                 </div>
         </div>
         <center>
+            
         <div class=" container dropSome">
             <div class="row flex">
                 <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -148,6 +149,14 @@
                     </div> 
             </div>
         </div>
+            <hr>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12">
+                        <iframe src="https://calendar.google.com/calendar/embed?height=350&amp;wkst=1&amp;bgcolor=%23ed127f&amp;ctz=America%2FNew_York&amp;src=dGVzdGJvdHVzZWNhbGVuZGFyQGdtYWlsLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%230B8043&amp;title=Kaptured%20By%20Ki%3A%20Availability%20&amp;showNav=0&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=1&amp;mode=MONTH" style="border:solid 1px #777" width="750" height="300" frameborder="0" scrolling="no"></iframe>
+                    </div>
+                </div>
+            </div>
             <hr>
             
             <div class="container kiFont">
