--- a/KiaraRolle copy/bookings.html
+++ b/KiaraRolle copy/bookings.html
@@ -35,11 +35,11 @@
         <div class="container mkWhite">
              <div class="jumbotron">
                     <h1><i class="far fa-handshake"></i> Booking Kaptured By Ki </h1>
-                 <p>Pricing <span class="spanSpace">|</span> Up-To-Date Schedule <span class="spanSpace">|</span> Booking Information</p>
+                 <p><a href="#part1" class="jumpTo">Pricing</a> <span class="spanSpace">|</span> <a href="#part2"  class="jumpTo">Up-To-Date Schedule</a> <span class="spanSpace">|</span> <a href="#part3" class="jumpTo">Booking Information</a></p>
                 </div>
         </div>
         <center>
-            
+        <span id="part1"></span>
         <div class=" container dropSome">
             <div class="row flex">
                 <div class="col-lg-3 col-sm-6 col-xs-12">
@@ -148,16 +148,19 @@
         </div> 
                     </div> 
             </div>
+            <span id="part2"></span>
         </div>
             <hr>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-sm-12">
-                        <iframe src="https://calendar.google.com/calendar/embed?height=375&amp;wkst=1&amp;bgcolor=%23ed127f&amp;ctz=America%2FNew_York&amp;src=dGVzdGJvdHVzZWNhbGVuZGFyQGdtYWlsLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=aHQzamxmYWFjNWxmZDYyNjN1bGZoNHRxbDhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;color=%230B8043&amp;color=%23B39DDB&amp;showCalendars=0&amp;showPrint=0&amp;title=Kaptured%20By%20Ki%3A%20Availability" style="border:solid 1px #777" width="800" height="375" frameborder="0" scrolling="no"></iframe>                    </div>
+                        <iframe src="https://calendar.google.com/calendar/embed?height=375&amp;wkst=1&amp;bgcolor=%23ed127f&amp;ctz=America%2FNew_York&amp;src=dGVzdGJvdHVzZWNhbGVuZGFyQGdtYWlsLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=aHQzamxmYWFjNWxmZDYyNjN1bGZoNHRxbDhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;color=%230B8043&amp;color=%23B39DDB&amp;showCalendars=0&amp;showPrint=0&amp;title=Kaptured%20By%20Ki%3A%20Availability" style="border:solid 1px #777" width="800" height="375" frameborder="0" scrolling="no"></iframe>
+                    </div>
                 </div>
             </div>
             <hr>
             
+            <span id="part3"></span>
             <div class="container kiFont">
                 <h1><i class="fas fa-exclamation-circle"></i></h1>
                 <h1>Important Details</h1>
